plugins {
	id 'java-gradle-plugin'
	id('com.gradle.plugin-publish') version "1.3.1"
}

java {
	sourceCompatibility = 17
	targetCompatibility = 17
}

group = 'net.apollofops'
version = '2025.0.2'

gradlePlugin {
	website = 'https://coffeecoder1.github.io/VendorTools/'
	vcsUrl = 'https://github.com/CoffeeCoder1/VendorTools'
	plugins {
		vendorTools {
			id = 'net.apollofops.first.VendorTools'
			displayName = 'VendorTools'
			implementationClass = 'net.apollofops.first.vendortools.VendorToolsPlugin'
			description = 'A better build system for WPILib Vendor dependencies.'
			tags = ['frc', 'wpilib', 'gradlerio', 'vendordep']
		}
	}
}

publishing {
    repositories {
        maven {
            name = 'localPluginRepository'
            url = file('../gradle-plugins')
        }
    }
}
